[project]
name = "random-price-generator-daria"
version = "0.1.0"
description = ""
authors = [
    {name = "Daria Vesela",email = "daria1vesela@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mypy (>=1.15.0,<2.0.0)",
    "pytest (>=8.3.5,<9.0.0)",
    "ruff (>=0.11.0,<0.12.0)",
    "numpy (>=2.2.4,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "typer (>=0.15.2,<0.16.0)"
]

[tool.pytest]
pythonpath = ["."]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
