[project]
name = "random-price-generator-daria"
version = "0.1.0"
description = ""
authors = [
    {name = "Daria Vesela", email = "daria1vesela@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mypy>=1.15.0,<2.0.0",
    "pytest>=8.3.5,<9.0.0",
    "ruff>=0.11.0,<0.12.0",
    "numpy>=2.2.4,<3.0.0",
    "pandas>=2.2.3,<3.0.0",
    "typer>=0.15.2,<0.16.0",
    "pendulum (>=3.1.0,<4.0.0)"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"